--- a/homepage/faq.html
+++ b/homepage/faq.html
@@ -70,8 +70,8 @@
             <br><br><br>
             <span class="content_main_bold">Windows Vista / Windows 7 installation issues</span><br><br>
             To overcome permission issues on Windows Vista and Windows 7 make sure to run the installer as
-            an administrator user (if you do not know how to do this google 'run as administrator'). 
-            This is sufficient for the installer to complete successfully. 
+            an administrator user (if you do not know how to do this google 'run as administrator').
+            This is sufficient for the installer to complete successfully.
             <br><br>Additionally I would recommend <b>not</b>
             to install Data Crow in the Program Files folder. Windows Vista and Windows 7 are very restrictive towards
             programs running from this folder. This is an issue for Data Crow as it writes all information (settings
@@ -184,8 +184,8 @@
 
 	<br><br>
 
-    <span class="content_main_bold">February 13, 2010<br>Data Crow 4.0 has been announced</span><br><br>
-    See the news page for the details!
+    <span class="content_main_bold">February 16, 2010<br>Data Crow 3.8.10 has been released</span><br><br>
+    This release contains minor bug fixes.
 
 	<br><br>
 
@@ -223,9 +223,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.9/datacrow_3_8_9_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.9/datacrow_3_8_9_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.9/datacrow_3_8_9_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.10/datacrow_3_8_10_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.10/datacrow_3_8_10_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.10/datacrow_3_8_10_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -242,7 +242,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.9/datacrow_3_8_9_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.10/datacrow_3_8_10_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
