--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -91,6 +91,11 @@
 
 	<br><br>
 
+	<span class="content_main_bold">March 14, 2010<br>Data Crow 3.8.11 has been released</span><br><br>
+	This release contains important bug fixes and an updated Italian language pack (big thanks to Marco Artioli).
+
+	<br><br>
+
     <span class="content_main_bold">February 16, 2010<br>Data Crow 3.8.10 has been released</span><br><br>
     This release contains minor bug fixes.
 
@@ -99,13 +104,8 @@
     <span class="content_main_bold">February 13, 2010<br>Data Crow 3.8.9 has been released</span><br><br>
     This release contains minor bug fixes.
 
-	<br><br>
-
-    <span class="content_main_bold">February 5, 2010<br>Data Crow 3.8.8 has been released</span><br><br>
-    This release contains minor bug fixes.
 
     <!-- NEWS END -->
-
 
   </td>
 
@@ -129,9 +129,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.10/datacrow_3_8_10_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.10/datacrow_3_8_10_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.10/datacrow_3_8_10_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.11/datacrow_3_8_11_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.11/datacrow_3_8_11_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.11/datacrow_3_8_11_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -148,7 +148,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.10/datacrow_3_8_10_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.11/datacrow_3_8_11_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
