--- a/homepage/reviews.html
+++ b/homepage/reviews.html
@@ -132,6 +132,11 @@
 
 	<br><br>
 
+    <span class="content_main_bold">June 15, 2010<br>Data Crow 3.8.15 has been released</span><br><br>
+    Contains important bug fixes and small improvements to the product.
+
+	<br><br>
+
 	<span class="content_main_bold">May 27, 2010<br>Data Crow 3.8.14 has been released</span><br><br>
 	Contains the fix for the item wizard. Retrieved pictures are now stored.
 
@@ -139,11 +144,6 @@
 
     <span class="content_main_bold">May 7, 2010<br>Data Crow 3.8.13 has been released</span><br><br>
     This version includes many minor changes and small improvements.
-
-	<br><br>
-
-    <span class="content_main_bold">May 3, 2010<br>Data Crow 3.8.12 has been released</span><br><br>
-    This release contains minor bug fixes and an updated french translation.
 
     <!-- NEWS END -->
 
@@ -169,9 +169,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.14/datacrow_3_8_14_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.14/datacrow_3_8_14_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.14/datacrow_3_8_14_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.15/datacrow_3_8_15_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.15/datacrow_3_8_15_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.15/datacrow_3_8_15_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -188,7 +188,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.14/datacrow_3_8_14_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.15/datacrow_3_8_15_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
