--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -87,6 +87,11 @@
 
     <!-- NEWS -->
 
+	<br><br>
+
+    <span class="content_main_bold">June 19, 2010<br>Data Crow 3.8.16 has been released</span><br><br>
+    This version includes minor bug fixes only.
+
     <span class="content_main_bold">Latest news</span>
 
 	<br><br>
@@ -98,11 +103,6 @@
 
 	<span class="content_main_bold">May 27, 2010<br>Data Crow 3.8.14 has been released</span><br><br>
 	Contains the fix for the item wizard. Retrieved pictures are now stored.
-
-	<br><br>
-
-    <span class="content_main_bold">May 7, 2010<br>Data Crow 3.8.13 has been released</span><br><br>
-    This version includes many minor changes and small improvements.
 
     <!-- NEWS END -->
 
@@ -128,9 +128,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.15/datacrow_3_8_15_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.15/datacrow_3_8_15_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.15/datacrow_3_8_15_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.16/datacrow_3_8_16_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.16/datacrow_3_8_16_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.16/datacrow_3_8_16_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -147,7 +147,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.15/datacrow_3_8_15_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.8.16/datacrow_3_8_16_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
