--- a/homepage/news.html
+++ b/homepage/news.html
@@ -67,6 +67,14 @@
         can be found <a href="changelog.txt" target="new">here</a>.
 
         <br><br><br>
+        <span class="content_main_bold">November 3, 2010 ~ Data Crow 3.9 BETA IV has been released</span><br><br>
+        Fixes the disappearing images and references bug as well improves the performance of the quick view.
+
+        <br><br><br>
+        <span class="content_main_bold">November 2, 2010 ~ Data Crow 3.9 BETA III has been released</span><br><br>
+        Several fixes and small changes.
+
+        <br><br><br>
         <span class="content_main_bold">October 29, 2010 ~ Data Crow 3.9 BETA II has been released</span><br><br>
    	    An exciting new version! Major perfomance improvements and loads of fixes. This version does not deliver any
         new functionality. It is however a total makeover (although internally) of the product. Memory usage has been 
