--- a/homepage/links.html
+++ b/homepage/links.html
@@ -132,21 +132,15 @@
     <td rowspan="3" valign="top" style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
     <td valign="top" class="content_main">
 
+
     <!-- NEWS -->
     
     <span class="content_main_bold">Latest news</span><br><br>
-        <span class="content_main_bold">February 13, 2011<br>Data Crow 3.9.5 has been released</span><br><br>Important bug fixes.<br><br>
-        <span class="content_main_bold">February 06, 2011<br>Data Crow 3.9.4 has been released</span><br><br>Important bug fixes.
-    
-	<br><br>
-
-	<span class="content_main_bold">January 25, 2010<br>Data Crow 3.9.3 has been released</span><br><br>
-	Small improvements, a new tool called Find and Replace and bug fixes .
-
-  
+        <span class="content_main_bold">April 1, 2011<br>Data Crow 3.9.6 has been released</span>  <br><br>Contains important bug fixes related to performance<br><br>
+        <span class="content_main_bold">February 13, 2011<br>Data Crow 3.9.5 has been released</span>  <br><br>Important bug fixes.<br><br>
+        <span class="content_main_bold">February 06, 2011<br>Data Crow 3.9.4 has been released</span>
 
 <!-- NEWS END -->
-
 
   </td>
 
@@ -168,12 +162,13 @@
 
 
 
+
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.5/datacrow_3_9_5_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.5/datacrow_3_9_5_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.5/datacrow_3_9_5_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.6/datacrow_3_9_6_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.6/datacrow_3_9_6_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.6/datacrow_3_9_6_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -190,7 +185,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.5/datacrow_3_9_5_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.6/datacrow_3_9_6_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
