--- a/homepage/news.html
+++ b/homepage/news.html
@@ -67,6 +67,10 @@
         can be found <a href="changelog.txt" target="new">here</a>.
 
         <br><br><br>
+        <span class="content_main_bold">April 1, 2011 ~ Data Crow 3.9.6 has been released</span><br><br>
+         This version contains important bug fixes relelated to performance
+
+<br><br><br>
         <span class="content_main_bold">February 13, 2011 ~ Data Crow 3.9.5 has been released</span><br><br>
          Bug fixes only. Mobygames.com service was not retrieving images and the file importers were no longer working correctly.
 
@@ -184,15 +188,9 @@
     <!-- NEWS -->
     
     <span class="content_main_bold">Latest news</span><br><br>
-        <span class="content_main_bold">February 13, 2011<br>Data Crow 3.9.5 has been released</span><br><br>Important bug fixes.<br><br>
-        <span class="content_main_bold">February 06, 2011<br>Data Crow 3.9.4 has been released</span><br><br>Important bug fixes.
-    
-	<br><br>
-
-	<span class="content_main_bold">January 25, 2010<br>Data Crow 3.9.3 has been released</span><br><br>
-	Small improvements, a new tool called Find and Replace and bug fixes .
-
-  
+        <span class="content_main_bold">April 1, 2011<br>Data Crow 3.9.6 has been released</span>  <br><br>Contains important bug fixes related to performance<br><br>
+        <span class="content_main_bold">February 13, 2011<br>Data Crow 3.9.5 has been released</span>  <br><br>Important bug fixes.<br><br>
+        <span class="content_main_bold">February 06, 2011<br>Data Crow 3.9.4 has been released</span>
 
 <!-- NEWS END -->
 
@@ -218,9 +216,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.5/datacrow_3_9_5_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.5/datacrow_3_9_5_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.5/datacrow_3_9_5_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.6/datacrow_3_9_6_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.6/datacrow_3_9_6_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.6/datacrow_3_9_6_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -237,7 +235,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.5/datacrow_3_9_5_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.6/datacrow_3_9_6_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
